# family-helper

./: .gitignore  family_helper_end_to_end_architecture_implementation_plan.md
deploy/: README.md
deploy/iac/: README.md  setup-backend.sh  validate.sh
deploy/iac/modules/: README.md
deploy/pipelines/: README.md
deploy/scripts/: README.md
docs/: README.md
docs/adr/: ADR-004-platform-wrapper-interface-enhancement.md  ADR-005-dependency-injection-pattern-platform-services.md  ADR-006-factory-pattern-service-container.md  ADR-007-comprehensive-testing-strategy.md  README.md
implementation-path/: phase-0-foundations.md
platform/: README.md
platform/python/: .gitignore  README.md  pyproject.toml
platform/python/docs/adrs/: README.md
platform/python/docs/adrs/python-platform-wrapper/: 001-poetry-package-management.md  002-abstract-base-classes-for-interfaces.md  003-structured-json-logging.md  004-environment-config-type-conversion.md  005-dependency-injection-pattern.md  006-async-first-design.md  007-comprehensive-test-strategy.md
platform/python/src/platform_py/: __init__.py  factory.py  interfaces.py
platform/python/src/platform_py/implementations/: __init__.py  config.py  logger.py  stubs.py
platform/python/tests/: conftest.py  test_config.py  test_factory.py  test_interfaces.py  test_logger.py  test_stubs.py
platform/schemas/: README.md
platform/ts/: README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
services/: README.md
services/gateway-edge/: README.md
services/identity/: README.md
(+20 files in other folders)
